	disabled

Version 0.2.1:
	- fixed C style comment autocompletion
	- fixed parameter passing when compiling/running
	- added support for C
	- added tab icons
	- fixed fileSaveAll action enabling/disabling
	- added a history to the shell
	- tabs now change when scrolls over
	- tabs of documents now show the filename as tooltip

Version 0.3:
	- created a list for showing classes, functions and imports, and the
	ability to search for documentation via the web browser
	- added support for unicode (finally)
	- added support for tabs, tabs will no longer be automatically
	converted for your "pleasure"
	- added the option to visibly show whitespace
	- fixed closing eggy on SIGTERM
	- removed warning of universal newline support
	- disable cut when it cannot be applied
	- better C/C++ autocompletion
	- adjusted ruby autocompletion to be less retarded
	- adjusted some code to be more efficient (such as the find algoritm (
	os.walk is no fun) and the compiler/interpreter/vm invocation)
	- show full filename in the statusbar
	- updated the grep plugin to select lines jumped to
	- option to toggle show/hide widgets
	- minor features which I have either forgotten to mention, or are not
	worth mentioning

Version 0.3.1:
	- fixed ruby attribute listings in attribute list
	- return key in projecttree opens selected file
	- adjusted decoding of compiler output
    - the ability to specify a (list of) filenames as arguments on startup,
      that will be opened
    - the possibility of specifying a (list of) filenames, while an eggy
      instance is already running, and having them opened in that instance.
      (this implies that only one eggy instance can run at a time)

Version 0.3.2:
    - xml support
    - fixed eggy settings lineup
    - automatically fill in project and package for a new file created from
      the project tree

Version 0.3.3:
    (nothing interesting from the user's point of view)
    - fixed package layout
    - added setup.py